# BetterVitaGrafixConfigTool

./: .gitignore  CMakeLists.txt  OFL.txt  README.MD
sce_sys/livearea/contents/: template.xml
src/: all.h  dropdown.cpp  dropdown.h  io.cpp  io.h  main.cpp  panel_gameconfig.cpp  panel_gameconfig.h  popup.cpp  popup.h  sidebar.cpp  sidebar.h  structs.h  textrenderer.cpp  textrenderer.h  utils.cpp  utils.h
